# SPPS

./: README.md
sppDesktop/: CMakeLists.txt  MainWnd.cxx  MainWnd.h  QtVtkView.cxx  QtVtkView.h  README.md  RadioButtonTreeView.cpp  RadioButtonTreeView.h  RltView.ui  TreeItem.cpp  TreeItem.h  TreeModel.cpp  TreeModel.h  dlgLogIn.cpp  dlgLogIn.h  dlgOpenCase.cpp  dlgOpenCase.h  editQueryResults.cpp  editQueryResults.h  main.cxx  pageCuttingPlane.cpp  pageCuttingPlane.h  pageMeshDisplay.cpp  pageMeshDisplay.h  pageQueryResults.cpp  pageQueryResults.h  pageResultDisplay.cpp  pageResultDisplay.h  sheetDisplayOptions.cpp  sheetDisplayOptions.h
sppDesktop/Icons/: icons.qrc
sppDesktop/VtkExt/: CMakeLists.txt  sppPlaneWidget.cpp  sppPlaneWidget.h  sppScalarBarActor.cpp  sppScalarBarActor.h  sppScalarBarActorAdapter.cpp  sppScalarBarActorAdapter.h  sppScalarBarRepresentation.cpp  sppScalarBarRepresentation.h  sppScalarBarWidget.cpp  sppScalarBarWidget.h  sppVtk.cpp  sppVtk.h
sppDesktop/dataModel/: Case.cpp  Case.h  Connect.cpp  Connect.h  Doc.cpp  Doc.h  Part.cpp  Part.h  Result.cpp  Result.h
sppDesktop/libdocker/inc/: docker.h
sppDesktop/libdocker/src/: docker.c
sppServer/: DockerFile_base  README.md
sppServer/v1.00/: Dockerfile
sppServer/v1.00/apps/www/: index.html
sppServer/v1.00/apps/www/js/3JS/: files.js
sppServer/v1.00/apps/www/js/3JS/js/controls/: EditorControls.js
sppServer/v1.00/apps/www/js/3JS/js/offscreen/: offscreen.js
sppServer/v1.00/apps/www/js/lib/: ObjectControls.js
sppServer/v1.00/apps/www/js/react/: xhxCustomContext.js
sppServer/v1.00/apps/www/js/xhxJS/: Config.js  Viewport.js
sppServer/v1.00/apps/www/js/xhxJS/css/: light.css
sppServer/v1.00/apps/www/js/xhxJS/libs/: app.js
sppServer/v1.00/apps/www/js/xhxJS/yyhx78/: LutInOld3JS.js  gnomeCtrl.js  shaders.js  xhxColorBar.js  xhxLoader.js  xhxView.js
sppWeb/: README.md
sppWeb/js/: app.js
sppWeb/js/3JS/js/renderers/: RaytracingWorker.js
sppWeb/js/lib/: Link.js
sppWeb/js/react/: xhxDialogs.js
sppWeb/js/xhxJS/: Editor.js  Init.js  Loader.js
sppWeb/js/xhxJS/css/: dark.css  main.css
sppWeb/js/xhxJS/yyhx78/: xhxPicker.js  xyzGizmo.js
sppWeb/js/xhxJS/yyhx78/fonts/: helvetiker_regular.typeface.js
